# serezha-watermark-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  config.yaml
deployment/: deployment.yaml  persistentvolumeclaim.yaml  secrets.sealed.yaml
src/: config.rs  grammers_boilerplate.rs  init_tracing.rs  main.rs  mask_generator.rs
src/bot/: lang.rs  mod.rs
