[package]
name = "serezha-watermark-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# using this exact version of grammers as it is known to work
# newer versions have "problems with mtsender" and I don't have time to debug those =(
grammers-client = { git = "https://github.com/Lonami/grammers.git", rev = "ff7432ebcd2ce5a38a63803880837de52c7bf363", features = ["markdown"] }
grammers-session = { git = "https://github.com/Lonami/grammers.git", rev = "ff7432ebcd2ce5a38a63803880837de52c7bf363" }
grammers-tl-types = { git = "https://github.com/Lonami/grammers.git", rev = "ff7432ebcd2ce5a38a63803880837de52c7bf363" }

config = "0.14.0"
serde = "1.0.204"
hex-serde = "0.1.0"

opentelemetry = "0.23.0"
opentelemetry-otlp = "0.16.0"
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.24.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros", "signal"] }

xml-builder = "0.5.2"
tiny-skia = { version = "0.11.4", default-features = false }
usvg = { version = "0.42.0", default-features = false, features = ["text", "memmap-fonts"] }
resvg = { version = "0.42.0", default-features = false, features = ["text", "memmap-fonts"] }
image = { version = "0.25.1", default-features = false, features = ["jpeg"] }
num-traits = "0.2.19"

anyhow = "1.0.86"
indoc = "2.0.5"
displaydoc = "0.2.5"

[dev-dependencies]
image = { version = "0.25.1", default-features = false, features = ["png", "jpeg"] }

[profile.ship]
inherits = "release"
debug = 0
lto = 'thin'
